update financebench_id_00585 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -981,6 +981,13 @@ financebench_id_00585:
   question: How does Boeing's effective tax rate in FY2022 compare to FY2021?
   answer: Effective tax rate in FY2022 was 0.62%, compared to  -14.76% in FY2021.
   page(s): '55'
+
+  category: 3-CALC-COMPLEX
+  correctness: >-
+    the answer contains calculated Effective Tax Rate percentage values for 2021 and 2022,
+    with one percentage value being negative and the other value being positive
+
+
 financebench_id_03473:
   doc: COCACOLA_2017_10K
   question: 'What is the FY2017 return on assets (ROA) for Coca Cola? ROA is defined
