--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -223,7 +223,7 @@ financebench_id_03856:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Operating Cash Flow Ratio metric value that is between 0.8 and 0.85
+    the answer contains a calculated Operating Cash Flow Ratio metric value that is in the range from 0.80 to 0.85
 
 
 financebench_id_00438:
