--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -491,7 +491,8 @@ financebench_id_03069:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer contains a calculated Depreciation & Amortization (D&A) Margin percentage value,
-    (using Net Revenue as denominator) that is approximately 4% or 4.2%
+    (using Net Revenue as denominator) that is approximately 4% or 4.2%,
+    or, alternatively, a decimal value that is approximately 0.04
 
 
 financebench_id_00222:
