--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1003,7 +1003,9 @@ financebench_id_03473:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Return on Assets (RoA) percentage value that is in the range from 1.00% to 2.00%
+    the answer contains a calculated Return on Assets (RoA)
+    percentage value that is in the range from 1.00% to 2.00%,
+    or, alternatively, decimal value that is in the range from 0.0100 to 0.0200
 
 
 financebench_id_09724:
