--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1258,6 +1258,12 @@ financebench_id_00299:
   question: Which of JPM's business segments had the lowest net revenue in 2021 Q1?
   answer: Corporate. Its net revenue was -$473 million.
   page(s): '19'
+
+  category: 1-COMPARE
+  correctness: >-
+    the answer identifies Corporate segment as having lowest net revenue
+
+
 financebench_id_02119:
   doc: JPMORGAN_2021Q1_10Q
   question: If JPM went bankrupted by the end by 2021 Q1 and liquidated all of its
