--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -641,7 +641,8 @@ financebench_id_00720:
   
   category: 6-OTHER-ADVANCED
   correctness: >-
-    the answer says that Gross Margin is not a very relevant/useful metric for American Express's business model
+    the answer says that Gross Margin is not a very relevant/useful metric
+    for American Express's business model and/or industry
 
 
 financebench_id_01351:
