update financebench_id_00723 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -629,7 +629,7 @@ financebench_id_00723:
   category: 6-OTHER-ADVANCED
   correctness: >-
     the answer says that Operating Margin is not a very relevant/useful metric
-    for American Express's business model and/or industry
+    for this business model and/or industry
 
 
 financebench_id_00720:
