update financebench_id_00299 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1263,7 +1263,7 @@ financebench_id_00299:
 
   category: 1-COMPARE
   correctness: >-
-    the answer identifies Corporate segment as having lowest net revenue
+    the answer identifies Corporate segment as having lowest Net Revenue
 
 
 financebench_id_02119:
