--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1369,6 +1369,12 @@ financebench_id_03718:
     question by primarily using the statement of income.
   answer: 0.4%
   page(s): '63'
+
+  category: 3-CALC-COMPLEX
+  correctness: >-
+    the answer contains a calculated CAGR percentage value that is approximately in the range from 0.400% to 0.500%
+
+
 financebench_id_04171:
   doc: MGMRESORTS_2018_10K
   question: Basing your judgments off of the balance sheet, what is the year end FY2018
