--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1528,6 +1528,13 @@ financebench_id_04302:
     to one decimal place.
   answer: 55.1%
   page(s): '46'
+
+  category: 3-CALC-COMPLEX
+  correctness: >-
+    the answer contains a calculated percentage value that is approximately in the range from 50.00% to 60.00%,
+    or, alternatively, a decimal value that is approximately in the range from 0.5 to 0.6
+
+
 financebench_id_03531:
   doc: NIKE_2019_10K
   question: According to the details clearly outlined within the balance sheet, how
