--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -24,8 +24,8 @@ financebench_id_04672:
   category: 0-RETRIEVE
   correctness: >-
     the answer contains a quantity equivalent to or approximately equal to
-    8.7, 8.738 billion, 8,738 million,
-    9, 8.7 billion, 9 billion or 9,000 million
+    8.738, 8.738 billion, 8738 million,
+    8.7, 8.7 billion or 8700 million
 
 
 financebench_id_00499:
