--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -877,7 +877,7 @@ financebench_id_07661:
   category: 0-RETRIEVE
   correctness: >-
     the answer contains a quantity equivalent to or approximately equal to
-    381.6, 381.6 million
+    381.6, 381.6 million, 0.3816 billion,
     382, 382 million, 0.382 billion,
     400, 400 million or 0.4 billion
 
