--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1608,6 +1608,17 @@ financebench_id_01009:
     North America, Latin America, Europe, Africa, Middle East, South Asia, Asia Pacific,
     Australia, New Zealand and China.'
   page(s): 4, 5
+
+  category: 0-RETRIEVE
+  correctness: |-
+    the answer mentions at least 3 of the following geographies:
+    - North America, which includes United States and Canada;
+    - Latin America (LatAm);
+    - Europe;
+    - Africa, Middle East and South Asia (AMESA); and
+    - Asia Pacific, Australia and New Zealand and China (APAC)
+
+
 financebench_id_00735:
   doc: PEPSICO_2022_10K
   question: Has Pepsico reported any materially important ongoing legal battles from
